[package]
name = "smart_contract"
version = "0.1.0"
description = "Token transfer smart contract"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "smart_contract"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
solana-program = "2.1.14"